# creaite-app-backend

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: move-cards-on-issue-close.yml
appcreaite/: settings.gradle.kts
appcreaite/app/: build.gradle.kts
appcreaite/app/src/main/: AndroidManifest.xml
appcreaite/app/src/main/java/core/validation/: Passwordvalidator.kt
appcreaite/app/src/main/java/data/AuthRepository/: AuthRepository.kt
appcreaite/app/src/main/java/domain/model/: User.kt
appcreaite/app/src/main/java/domain/usecase/: LoginUseCase.kt
appcreaite/app/src/main/res/values/: themes.xml
appcreaite/gradle/wrapper/: gradle-wrapper.properties
client/: BUILD.bazel
client/src/: Main.kt
client/src/app/src/main/: AndroidManifest.xml
client/src/app/src/main/java/core/validation/: Passwordvalidator.kt
client/src/app/src/main/java/data/AuthRepository/: AuthRepository.kt
client/src/app/src/main/java/domain/model/: User.kt
client/src/app/src/main/java/domain/usecase/: LoginUseCase.kt
client/src/app/src/main/res/values/: strings.xml
client/src/gradle/wrapper/: gradle-wrapper.properties
server/: BUILD.bazel
server/src/: Main.java
wardrobe-api/: .gitignore  nixpacks.toml  pom.xml
wardrobe-api/src/main/java/com/creaite/wardrobe_api/: WardrobeApiApplication.java
wardrobe-api/src/main/java/com/creaite/wardrobe_api/config/: AsyncConfig.java
wardrobe-api/src/main/resources/: application.properties
wardrobe-api/src/test/java/com/creaite/wardrobe_api/: WardrobeApiApplicationTests.java
(+38 files in other folders)
