# Carrega a função http_archive para baixar dependências externas
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Baixa as regras de Kotlin
http_archive(
    name = "io_bazel_rules_kotlin",
    urls = ["https://github.com/bazelbuild/rules_kotlin/releases/download/v1.5.0/rules_kotlin.tar.gz"],
    sha256 = "12d22a3d9cf2bbddeb5e6a157559e9e193e6986d4ef28633c8ae29abe89d7e25",
)

# Carrega e configura os repositórios Kotlin
load("@io_bazel_rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories")
kotlin_repositories()

# Carrega e registra as toolchains Kotlin
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_register_toolchains")
kt_register_toolchains()